<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_gravity="center_horizontal"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/androidButtton"
        android:layout_width="152dp"
        android:layout_height="80dp"
        android:layout_marginStart="129dp"
        android:layout_marginLeft="129dp"
        android:layout_marginTop="20dp"
        android:onClick="onClickAndroid"
        android:text="@string/android"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/pythonButton"
        android:layout_width="152dp"
        android:layout_height="80dp"
        android:layout_marginStart="129dp"
        android:layout_marginLeft="129dp"
        android:layout_marginTop="11dp"
        android:onClick="onClickPython"
        android:text="@string/python"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/androidButtton" />

    <Button
        android:id="@+id/angularButton"
        android:layout_width="152dp"
        android:layout_height="80dp"
        android:layout_marginStart="129dp"
        android:layout_marginLeft="129dp"
        android:layout_marginTop="12dp"
        android:onClick="onClickAngular"
        android:text="@string/angular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pythonButton" />

    <Button
        android:id="@+id/cButton"
        android:layout_width="152dp"
        android:layout_height="80dp"
        android:layout_marginStart="129dp"
        android:layout_marginLeft="129dp"
        android:layout_marginTop="13dp"
        android:onClick="onClickC"
        android:text="@string/c"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/angularButton" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="140dp"
        android:layout_height="71dp"
        android:layout_marginStart="135dp"
        android:layout_marginLeft="135dp"
        android:layout_marginTop="65dp"
        android:gravity="center"
        android:text="@string/courses"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="395dp"
        android:layout_height="49dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

</android.support.constraint.ConstraintLayout>